# uchile_system

./: .gitignore  .gitmodules  NOTAS_PEPPER.sh  README.md  TODO  TODO.sh  TODOS.sh  setup.bash  setup.sh  setup.zsh  test_arch.sh
assets/: bender.machine  profiling_2016_05_21.txt
bash/: bender_ws_installer.bash  complete.bash  functions.sh  make_tools.sh  make_tools_complete.bash  setup.sh  tools.sh  tools_complete.bash
bash/git/: gittools.sh  gittools_complete.bash
bash/megadown/: .gitignore
doc/: TODO.md  changelist.md  description.md  githooks.md  guidelines.md  installation.md  installation_nfs.md  maqui.md  pcteamconfiguration.md  tools.md  troubleshooting.md
env/: env-loader.sh  network-defs.sh
hooks/: pre-commit  pre-commit.sh
hooks/hooks/: check_merge_conflict.py  common.sh  install.sh  pre-commit  pre-commit.sh  pre-commit_cpp.sh  pre-commit_filenames.sh  pre-commit_merge_conflict.sh  pre-commit_python.sh  pre-commit_shell.sh  pre-commit_size.sh  pre-commit_xml.sh  pre-commit_yaml.sh  quotes.txt  yaml_linter.py
hooks/samples/: merge_conflict.py
hooks/samples/xml/invalid/: bender.sdf  bender.urdf  bender_asus.urdf.xacro  common.xacro  navigation.launch  package.xml  tag-mispell.launch  unclosed-tag.launch
install/: TODOS.sh  bender_ws_installer.bash  bender_ws_installer.bash.old  helpers.bash  link_repositories.bash  makeself.sh  maqui_ws_installer.bash  packages-fix.bash  uchile_hosts_config.bash  ws_installer.bash
install/nfs/: uchile_nfs_exports.bash  uchile_nfs_mount.bash
install/robots/: all.sh  bender.sh  jaime.sh  maqui.sh
install/util/: helpers.bash  migrate.sh  pkg_install.bash
shell/: functions.sh  gittools.sh  make_tools.sh  pepper_face.bash  setup.sh  tools.sh
shell/complete/: common.sh  gittools.sh  tools.sh
shell/deprecated/: make_tools.sh
shell/extra/: bender_face.bash  mati.bash  uch_robots.bash  uch_robots_ver.bash
shell/ros_network_indicator/: README.md  ros_network_indicator.desktop  ros_network_indicator.py
templates/: bash_aliases  bender.sh  default.gitconfig  gitconfig_meld_launcher.py  robot.sh  uchile.sh
(+31 files in other folders)
